--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wiledia/themes",
+    "name": "dansketic/themes",
     "description": "Laravel 5 Themes",
     "keywords": ["themes", "laravel", "caffeinated", "blade"],
     "license": "MIT",
