--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Wiledia",
-            "email": "hello@wiledia.com"
+            "name": "DanSketic",
+            "email": "dev@dansketic.com"
         }
     ],
     "require": {
