--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
             "email": "dev@dansketic.com"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": ">=5.6.4",
-        "caffeinated/manifest": "1.0.*",
-        "illuminate/support": "5.8.*"
+        "php": "^7.1.3",
+        "caffeinated/composer-installers": "*",
+        "illuminate/support": "5.7.*|5.8.*|^6.0"
     },
     "autoload": {
+        "files": [
+            "helpers/themes.php"
+        ],
         "psr-4": {
             "Caffeinated\\Themes\\": "src/"
         }
